force-app/main/default/objects/sked__Location_Resource_Score__c/sked__Location_Resource_Score__c.object-meta.xml
<CustomObject>
    <label>Location Resource Score</label>
    <nameField>
        <displayFormat>LRS-{00000}</displayFormat>
        <label>LocationResourceScore Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Resource Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>