force-app/main/default/objects/sked__Location_Resource_Score__c/fields/sked__Blacklisted__c.field-meta.xml
<CustomField>
    <fullName>sked__Blacklisted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blacklisted</label>
    <type>Checkbox</type>
</CustomField>