force-app/main/default/objects/sked__Location_Resource_Score__c/fields/sked__Location__c.field-meta.xml
<CustomField>
    <fullName>sked__Location__c</fullName>
    <label>Location</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Location Resource Scores</relationshipLabel>
    <relationshipName>Location_Resource_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>