force-app/main/default/objects/sked__Location_Resource_Score__c/fields/sked__Resource__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Location Resource Scores</relationshipLabel>
    <relationshipName>Location_Resource_Scores</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>