force-app/main/default/objects/sked__Location_Resource_Score__c/fields/sked__Whitelisted__c.field-meta.xml
<CustomField>
    <fullName>sked__Whitelisted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whitelisted</label>
    <type>Checkbox</type>
</CustomField>